# MyTinyRPC

./: CMakeLists.txt  README.md
include/: interface.hpp
src/: client.cxx  main.cxx  server.cxx
